# nightfleet

./: .gitignore  CMakeLists.txt  readme.md
include/client/: clientlogin.h  colors.h  graphics.h
include/client/dgl/: atlas.h  debug.h  shader.h
include/common/: scope_guard.h  version.h
include/common/engine/: content.h  field.h  game.h  map.h  move.h  registry.h  terrain.h  unit.h
include/common/network/: defaults.h  exceptions.h  message.h  nbuffer.h  protocol.h  rxbuffer.h  serde_macros.h  txbuffer.h
include/common/util/: time.h  version.h
include/server/: connectionhandler.h  gamemanager.h  server.h  usermanager.h
libraries/: CMakeLists.txt
libraries/glad/: CMakeLists.txt
libraries/glad/src/: glad.c
libraries/imgui/: CMakeLists.txt  imconfig.h
libraries/stb/: CMakeLists.txt
source/client/: CMakeLists.txt  clientlogin.cpp  graphics.cpp  main.cpp
source/client/dgl/: CMakeLists.txt  atlas.cpp  debug.cpp  shader.cpp
source/common/: CMakeLists.txt
source/common/engine/: CMakeLists.txt  content.cpp  game.cpp  map.cpp  move.cpp  terrain.cpp  unit.cpp
source/common/network/: CMakeLists.txt  message.cpp  nbuffer.cpp  protocol.cpp  rxbuffer.cpp  txbuffer.cpp
source/common/util/: CMakeLists.txt  time.cpp  version.cpp
source/server/: CMakeLists.txt  connectionhandler.cpp  gamemanager.cpp  main.cpp  server.cpp  usermanager.cpp
textures/: defeat.xcf  victory.xcf
textures/terrain/: asteroids.xcf  blackHole.xcf  debris.xcf  gasPlanet.xcf  minefield.xcf  nebula.xcf  neutronStar.xcf  planetoid.xcf  redDwarf.xcf  redGiant.xcf  rockPlanet.xcf  space.xcf  yellowDwarf.xcf
textures/units/: bomber.xcf  cruiser.xcf  fighter.xcf
(+1 files in other folders)
